[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gambletron"
version = "0.1.0"
description = "State-of-the-art AI forex trading agent with advanced ML strategies"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Trading Team"}]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "yfinance>=0.2.30",
    "ccxt>=3.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "plotly>=5.17.0",
    "ta-lib>=0.4.28",
    "ray>=2.7.0",
    "optuna>=3.13.0",
    "mlflow>=2.7.0",
    "loguru>=0.7.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "alpaca-py>=0.20.0",
    "sqlalchemy>=2.0.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.15.0",
    "notebook>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
